--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <main>
         <div>
             <h1>
-                Hey, I am <br> a <span>Web Developper</span>
+                Hey, I am <br> a <span>Web Developer</span>
             </h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, mollitia.</p>
             <button type="button">See My Projects</button>
